Created a (very hacky) way to subscribe to all github hook events.
I promise I will tidy this up and make it easier. Eventually.

--- a/src/App.config
+++ b/src/App.config
@@ -11,6 +11,10 @@
     <add key="XMPPPassword" value="" />
     <add key="XMPPConferenceServer" value="" />
     <add key="XMPPRoom" value="" />
+    <add key="GitHubUsername" value="" />
+    <add key="GitHubPassword" value="" />
+    <add key="GitHubRepo" value="" />
+    <add key="GitHubHookId" value="" />
   </appSettings>
   <common>
     <logging>
