Added a command line utility to configure a previously-created github web hook.

--- a/src/GitHub-XMPP.csproj
+++ b/src/GitHub-XMPP.csproj
@@ -84,7 +84,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventHandlers\GitHubIssueEventData.cs" />
     <Compile Include="EventHandlers\GitHubWikiUpdateEvent.cs" />
+    <Compile Include="EventHandlers\GitHubWikiUpdateEventData.cs" />
     <Compile Include="GitHubDtos\GitHubCommit.cs" />
     <Compile Include="GitHubDtos\GitHubIssueComment.cs" />
     <Compile Include="EventHandlers\GitHubIssueCommentEvent.cs" />
