Changed wiki event to use the repo full_name instead of trying to build it from the user and repo name.
Added a test class for inspecting the bot results.

--- a/GitHub-XMPP.Tests/GitHub-XMPP.Tests.csproj
+++ b/GitHub-XMPP.Tests/GitHub-XMPP.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="GitHubPullRequestReviewCommentEventArrives.cs" />
     <Compile Include="GitHubPushEventArrives.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeeBotResponses.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="SampleJson\DummyGitHubPushJson.txt">
