--- a/src/App.config
+++ b/src/App.config
@@ -16,6 +16,7 @@
     <add key="GitHubPassword" value="" />
     <add key="GitHubRepo" value="" />
     <add key="GitHubHookId" value="" />
+    <add key="ScriptFolder" value="" />
   </appSettings>
   <common>
     <logging>
