--- a/src/GitHub-XMPP.csproj
+++ b/src/GitHub-XMPP.csproj
@@ -59,8 +59,17 @@
     <Reference Include="agsXMPP">
       <HintPath>packages\agsXMPP.1.1.1.0\lib\agsXMPP.dll</HintPath>
     </Reference>
+    <Reference Include="Castle.Core">
+      <HintPath>packages\Castle.Core.3.2.0\lib\net40-client\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>packages\Castle.Windsor.3.2.0\lib\net40-client\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Logging">
       <HintPath>packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Jurassic">
+      <HintPath>packages\Jurassic.2.1.1\lib\Jurassic.dll</HintPath>
     </Reference>
     <Reference Include="Nancy">
       <HintPath>packages\Nancy.0.17.1\lib\net40\Nancy.dll</HintPath>
@@ -84,6 +93,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Installers\DomainEventsInstaller.cs" />
+    <Compile Include="Installers\GitHubEventInstaller.cs" />
+    <Compile Include="Installers\XMPPMessengerInstaller.cs" />
+    <Compile Include="IoC.cs" />
     <Compile Include="EventHandlers\GitHubForkEventData.cs" />
     <Compile Include="EventHandlers\GitHubIssueEventData.cs" />
     <Compile Include="EventHandlers\GitHubMemberEvent.cs" />
@@ -92,6 +105,9 @@
     <Compile Include="EventHandlers\GitHubWikiUpdateEvent.cs" />
     <Compile Include="EventHandlers\GitHubWikiUpdateEventData.cs" />
     <Compile Include="EventHandlers\GitHubForkEvent.cs" />
+    <Compile Include="EventServices\DomainEvents.cs" />
+    <Compile Include="EventServices\IDomainEvent.cs" />
+    <Compile Include="EventServices\IHandle.cs" />
     <Compile Include="GitHubDtos\GitHubCommit.cs" />
     <Compile Include="GitHubDtos\GitHubIssueComment.cs" />
     <Compile Include="EventHandlers\GitHubIssueCommentEvent.cs" />
@@ -116,11 +132,12 @@
     <Compile Include="EventServices\GitHubHookServer.cs" />
     <Compile Include="GitHubDtos\WikiPageUpdateDetails.cs" />
     <Compile Include="Installers\GitHubHookInstaller.cs" />
-    <Compile Include="Installers\IoCInstaller.cs" />
     <Compile Include="Notifiers\IEventNotifier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Notifiers\XMPPClient.cs" />
+    <Compile Include="XMPP\GroupChatMessageArrived.cs" />
+    <Compile Include="XMPP\GroupChatScriptHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -130,6 +147,7 @@
     <None Include="App.Debug.config">
       <DependentUpon>App.config</DependentUpon>
       <IsTransformFile>True</IsTransformFile>
+      <SubType>Designer</SubType>
     </None>
     <None Include="App.Release.config">
       <DependentUpon>App.config</DependentUpon>
@@ -137,6 +155,7 @@
     </None>
     <None Include="packageRestore.proj" />
     <None Include="packages.config" />
+    <None Include="Scripts\applause.coffee" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
@@ -160,7 +179,17 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Scripts\applause.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BaseScripts\hubotScriptInvoker.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BaseScripts\coffee-script.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SlowCheetahTargets)" Condition="Exists('$(SlowCheetahTargets)')" Label="SlowCheetah" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
