--- a/src/packages.config
+++ b/src/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="agsXMPP" version="1.1.1.0" targetFramework="net40-Client" />
+  <package id="Castle.Core" version="3.2.0" targetFramework="net40-Client" />
+  <package id="Castle.Windsor" version="3.2.0" targetFramework="net40-Client" />
+  <package id="CoffeeScript" version="1.6.2" targetFramework="net40-Client" />
   <package id="Common.Logging" version="2.0.0" targetFramework="net40-Client" />
+  <package id="Jurassic" version="2.1.1" targetFramework="net40-Client" />
   <package id="Nancy" version="0.17.1" targetFramework="net40-Client" />
   <package id="Nancy.Hosting.Self" version="0.17.1" targetFramework="net40-Client" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40-Client" />
