--- a/src/GitHub-XMPP.csproj
+++ b/src/GitHub-XMPP.csproj
@@ -160,6 +160,12 @@
     <None Include="packageRestore.proj" />
     <None Include="packages.config" />
     <None Include="Scripts\applause.coffee" />
+    <None Include="Scripts\ferengi_rules_of_acquisition.coffee">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Scripts\reddit-jokes.coffee">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
@@ -184,6 +190,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BaseScripts\ScopedHttpClient.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\applause.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
