Added option to not run the github listener (allows multiple bot instances on one machine).

--- a/src/App.config
+++ b/src/App.config
@@ -17,6 +17,7 @@
     <add key="GitHubRepo" value="" />
     <add key="GitHubHookId" value="" />
     <add key="ScriptFolder" value="" />
+    <add key="RunGitHubListener" value="true" />
   </appSettings>
   <common>
     <logging>
