--- a/src/GitHubHookConfigurator/GitHubHookConfigurator.csproj
+++ b/src/GitHubHookConfigurator/GitHubHookConfigurator.csproj
@@ -55,9 +55,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GitHub-XMPP.csproj">
+    <ProjectReference Include="..\GitHub-XMPP.Core\GitHub-XMPP.Core.csproj">
       <Project>{8397A1F6-E79C-4438-A47A-9E0026F7554F}</Project>
-      <Name>GitHub-XMPP</Name>
+      <Name>GitHub-XMPP.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
