--- a/src/packages/NUnit.2.6.2/NUnit.2.6.2.nuspec
+++ b/src/packages/NUnit.2.6.2/NUnit.2.6.2.nuspec
@@ -7,7 +7,7 @@
     <authors>Charlie Poole</authors>
     <owners>Charlie Poole</owners>
     <licenseUrl>http://nunit.org/nuget/license.html</licenseUrl>
-    <projectUrl>http://nunit.org/</projectUrl>
+    <projectUrl>http://nunit.org</projectUrl>
     <iconUrl>http://nunit.org/nuget/nunit_32x32.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>NUnit features a fluent assert syntax, parameterized, generic and theory tests and is user-extensible. A number of runners, both from the NUnit project and by third parties, are able to execute NUnit tests.
@@ -21,7 +21,6 @@ This package includes only the framework assembly. You will need to install the 
 Unlike earlier versions, this package includes only the framework assembly. You will need to install the NUnit.Runners package unless you are using a third-party runner.
 
 The nunit.mocks assembly is now provided by the NUnit.Mocks package. The pnunit.framework assembly is provided by the pNUnit package.</releaseNotes>
-    <copyright />
     <language>en-US</language>
     <tags>test testing tdd framework fluent assert theory plugin addin</tags>
   </metadata>
