--- a/src/packages/RestSharp.103.4/RestSharp.103.4.nuspec
+++ b/src/packages/RestSharp.103.4/RestSharp.103.4.nuspec
@@ -3,10 +3,10 @@
   <metadata>
     <id>RestSharp</id>
     <version>103.4</version>
-    <authors>John Sheehan,  RestSharp Community</authors>
-    <owners>John Sheehan,  RestSharp Community</owners>
+    <authors>John Sheehan, RestSharp Community</authors>
+    <owners>John Sheehan</owners>
     <licenseUrl>https://github.com/restsharp/RestSharp/blob/master/LICENSE.txt</licenseUrl>
-    <projectUrl>http://restsharp.org/</projectUrl>
+    <projectUrl>http://restsharp.org</projectUrl>
     <iconUrl>http://dl.dropbox.com/u/1827/restsharp100.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Simple REST and HTTP API Client</description>
@@ -21,6 +21,7 @@
 * Improve support for parsing iso8601 dates (thanks friism)
 
 For full release notes see https://github.com/restsharp/RestSharp/blob/master/releasenotes.markdown</releaseNotes>
+    <language>en-US</language>
     <tags>REST HTTP API JSON XML</tags>
   </metadata>
 </package>
