--- a/src/GitHub-XMPP.Tests/GitHub-XMPP.Tests.csproj
+++ b/src/GitHub-XMPP.Tests/GitHub-XMPP.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="GitHubPullRequestReviewCommentEventArrives.cs" />
     <Compile Include="GitHubPushEventArrives.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptEngine\CoffeeScriptCompilerWorks.cs" />
     <Compile Include="SeeBotResponses.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +107,7 @@
     <Content Include="SampleJson\GitHubPushJson.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Scripts\applause.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GitHub-XMPP.Core\GitHub-XMPP.Core.csproj">
@@ -115,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <EmbeddedResource Include="Scripts\applause.coffee" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
