--- a/src/GitHub-XMPP.Core/App.config
+++ b/src/GitHub-XMPP.Core/App.config
@@ -12,12 +12,15 @@
     <add key="XMPPPassword" value="" />
     <add key="XMPPConferenceServer" value="" />
     <add key="XMPPRoom" value="" />
+    <add key="XMPPNickname" value="GitBot" />
     <add key="GitHubUsername" value="" />
     <add key="GitHubPassword" value="" />
     <add key="GitHubRepo" value="" />
     <add key="GitHubHookId" value="" />
     <add key="ScriptFolder" value="" />
     <add key="RunGitHubListener" value="true" />
+    <add key="HipChatAPIKey" value="" />
+    <add key="HipChatRoomId" value="" />
   </appSettings>
   <common>
     <logging>
