--- a/src/GitHub-XMPP.Core/GitHub-XMPP.Core.csproj
+++ b/src/GitHub-XMPP.Core/GitHub-XMPP.Core.csproj
@@ -99,6 +99,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GitHub\EventHandlers\DTOs\GitHubMemberEventData.cs" />
+    <Compile Include="HipChat\DTOs\Request\RoomNotificationRequest.cs" />
+    <Compile Include="HipChat\DTOs\Response\Room.cs" />
+    <Compile Include="HipChat\HipChatClient.cs" />
     <Compile Include="Installers\DomainEventsInstaller.cs" />
     <Compile Include="Installers\GitHubEventInstaller.cs" />
     <Compile Include="Installers\XMPPBotInstaller.cs" />
@@ -142,8 +145,6 @@
     <Compile Include="EventServices\IEventNotifier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scripting\CoffeescriptCompiler.cs" />
-    <Compile Include="Scripting\ScriptEngine.cs" />
     <Compile Include="XMPP\XMPPClient.cs" />
     <Compile Include="XMPP\Bot\Counter.cs" />
     <Compile Include="XMPP\Bot\GitBot.cs" />
@@ -203,7 +204,9 @@
     </Content>
     <Content Include="Scripts\coffee-script.js" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Scripting\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SlowCheetahTargets)" Condition="Exists('$(SlowCheetahTargets)')" Label="SlowCheetah" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
