--- a/src/GitHub-XMPP.Core/GitHub-XMPP.Core.csproj
+++ b/src/GitHub-XMPP.Core/GitHub-XMPP.Core.csproj
@@ -91,6 +91,9 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
